manifests/kube-resource-report-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: kube-resource-report
    version: v0.15
  name: kube-resource-report
spec:
  replicas: 1
  selector:
    matchLabels:
      application: kube-resource-report
  template:
    metadata:
      labels:
        application: kube-resource-report
        version: v0.15
    spec:
      serviceAccount: kube-resource-report
      containers:
      - name: kube-resource-report
        # see https://github.com/hjacobs/kube-resource-report/releases
        image: hjacobs/kube-resource-report:0.15
        args:
        - --update-interval-minutes=1
        # Hetzner CX11 is 2.96 EUR/mon
        - --additional-cost-per-cluster=3.29
        - --links-file=/config/links.yaml
        - /output
        volumeMounts:
        - mountPath: /output
          name: report-data
        - name: config-volume
          mountPath: /config
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 5m
            memory: 50Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: report-data
          readOnly: true
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          limits:
            memory: 50Mi
          requests:
            cpu: 5m
            memory: 20Mi
      volumes:
          - name: report-data
            emptyDir:
              sizeLimit: 500Mi
          - name: config-volume
            configMap:
              name: kube-resource-report-config
