manifests/kube-ops-view-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-ops-view
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: "kube-ops-view.demo.j-serv.de"
    http:
      paths:
      - backend:
          serviceName: kube-ops-view
          servicePort: 80
