manifests/kube-resource-report-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-resource-report
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: "kube-resource-report.demo.j-serv.de"
    http:
      paths:
      - backend:
          serviceName: kube-resource-report
          servicePort: 80
