manifests/ssb-room-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssb-room
  annotations:
    # redirect to port 8007 to show SSB Room welcome page
    # see also https://github.com/staltz/ssb-room
    traefik.ingress.kubernetes.io/redirect-regex: ^https?://ssb-room.j-serv.de/(.*)
    traefik.ingress.kubernetes.io/redirect-replacement: http://ssb-room.j-serv.de:8007/$1
spec:
  rules:
  - host: ssb-room.j-serv.de
    http:
      paths:
      - backend:
          service:
            # this is actually not used because of the redirect above
            name: nginx
            port:
              number: 80
        pathType: ImplementationSpecific
